# MarketMover

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  handler.py  pyproject.toml
backend/app/: cli.py  config.py
backend/app/api/: app.py  routes.py
backend/app/backtesting/: service.py
backend/app/db/: cleanup.py  models.py  session.py
backend/app/detection/: engine.py
backend/app/features/: service.py
backend/app/ingestion/: mock_provider.py  provider.py  service.py  yahoo_provider.py
backend/tests/: conftest.py  test_integration.py  test_unit.py  test_yahoo_cli.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/pages/: Backtest.tsx  Dashboard.tsx  Scan.tsx  TickerDetail.tsx
infra/: package-lock.json  package.json  tsconfig.json
infra/lib/: mmd-stack.ts
infra/test/: mmd-stack.test.ts
