[project]
name = "market-movement-detector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "numpy>=2.2.1",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
