[project]
name = "market-movement-detector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "numpy>=2.2.1",
    "yfinance>=0.2.40",
    "finvizfinance>=1.3.0",
    "pytest>=8.3.4",
]

[project.scripts]
mmd = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
